k8s/dev/collection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-cache-collector
spec:
  selector:
    matchLabels:
      app: my-deployment-cache-collector
  template:
    metadata:
      labels:
        app: my-deployment-cache-collector
    spec:
      containers:
      - name: cache-collector
        image: iad.ocir.io/${OCI_NAMESPACE}/data-collection-${BUILD_ENV}:latest
        resources:
          limits:
            memory: 200Mi
            cpu: 80m
          requests:
            memory: 100Mi
            cpu: 40m
        ports:
        - containerPort: 8080
