k8s/dev/deployment-servers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-servers
  labels:
    app: my-servers

spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-servers

  template:
    metadata:
      labels:
        app: my-template

    spec:
      containers:
      - name: front-end
        image: ??? 
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 200Mi
            cpu: 40m
          requests:
            memory: 100Mi
            cpu: 20m

      - name: back-end
        image: ???
        ports: 
        - containerPort: 8080
        resources:
          limits:
            memory: 400Mi
            cpu: 80m
          requests:
            memory: 200Mi
            cpu: 40m
