k8s/dev/front-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-servers
  labels:
    app: my-deployment-frontend-backend

spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentiments-frontend

  template:
    metadata:
      labels:
        app: sentiments-frontend

    spec:
      containers:
      - name: front-end
        image: iad.ocir.io/${OCI_NAMESPACE}/front-end-${BUILD_ENV}:latest
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: 200Mi
            cpu: 40m
          requests:
            memory: 100Mi
            cpu: 20m

      - name: back-end
        image: iad.ocir.io/${OCI_NAMESPACE}/back-end-${BUILD_ENV}:latest
        ports:
          - containerPort: 8000
        resources:
          limits:
            memory: 400Mi
            cpu: 80m
          requests:
            memory: 200Mi
            cpu: 40m
