k8s/dev/back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
